logo nav button

--- a/index.html
+++ b/index.html
@@ -18,5 +18,29 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Whitepace</title>
 </head>
-<body></body>
+<body>
+
+  <header class="header header--blue">
+    <div class="u-container header__flex">
+    <div class="header__logo">
+      <img src="images/svg/logo.svg" alt="logo">
+    </div>
+    <div class="header__nav">
+      <nav class="nav">
+        <div class="nav__item"><a href="#"> Products</a></div>
+        <div class="nav__item"><a href="#"> Solutions</a></div>
+        <div class="nav__item"><a href="#"> Resources</a></div>
+        <div class="nav__item"><a href="#"> Pricing</a></div>
+      </nav>
+    </div>
+    <div class="header__button">
+      <div class="top__button">
+      <div><a href="#"></a>Login</div>
+      <div><a href="#"></a>Try Whitepace free</div>
+    </div>
+    </div>
+    </div>
+  </header>
+
+</body>
 </html>
