--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </div>
     <div class="header__nav">
       <nav class="nav">
-        <div class="nav__item"><a href="#"> Products</a></div>
-        <div class="nav__item"><a href="#"> Solutions</a></div>
-        <div class="nav__item"><a href="#"> Resources</a></div>
-        <div class="nav__item"><a href="#"> Pricing</a></div>
+        <a class="nav__item" href="#"> Products</a>
+        <a class="nav__item" href="#"> Solutions</a>
+        <a class="nav__item" href="#"> Resources</a>
+        <a class="nav__item" href="#"> Pricing</a>
       </nav>
     </div>
     <div class="header__button">
