--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
     </div>
     <div class="header__nav">
       <nav class="nav">
-        <a class="nav__item" href="#"> Products</a>
-        <a class="nav__item" href="#"> Solutions</a>
-        <a class="nav__item" href="#"> Resources</a>
-        <a class="nav__item" href="#"> Pricing</a>
+        <a class="nav__item" href="#"> Products <img src="images/svg/arrow-down.svg" alt="down"></a>
+        <a class="nav__item" href="#"> Solutions <img src="images/svg/arrow-down.svg" alt="down"></a>
+        <a class="nav__item" href="#"> Resources <img src="images/svg/arrow-down.svg" alt="down"></a>
+        <a class="nav__item" href="#"> Pricing <img src="images/svg/arrow-down.svg" alt="down"></a>
       </nav>
     </div>
     <div class="header__button">
-      <div class="top__button">
-      <div><a href="#"></a>Login</div>
-      <div><a href="#"></a>Try Whitepace free</div>
-    </div>
+      <a class="btn btn--secondary" href="#">Login</a>
+      <a class="btn btn--primary" href="#">Try Whitepace free <img src="images/svg/arrow-right.svg" alt=""></a>
     </div>
     </div>
   </header>
