mobile menu + java script

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="images/svg/logo.svg" alt="logo">
     </div>
     <div class="header__nav">
-      <nav class="nav">
+      <nav id="menu" class="nav">
         <a class="nav__item" href="#"> Products <img src="images/svg/arrow-down.svg" alt="down"></a>
         <a class="nav__item" href="#"> Solutions <img src="images/svg/arrow-down.svg" alt="down"></a>
         <a class="nav__item" href="#"> Resources <img src="images/svg/arrow-down.svg" alt="down"></a>
@@ -37,8 +37,15 @@
       <a class="btn btn--secondary" href="#">Login</a>
       <a class="btn btn--primary" href="#">Try Whitepace free <img src="images/svg/arrow-right.svg" alt=""></a>
     </div>
+    <div class="header__mobile">
+      <div class="container" onclick="myFunction(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    </div>
     </div>
   </header>
-
+  <script src="js/scripts.js"></script>
 </body>
 </html>
